k8s-yamls/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: db-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: db
    template:
        metadata:
            labels:
                app: db
        spec:
            containers:
                - name: postgres
                  image: postgres:13
                  volumeMounts:
                      - name: db-storage
                        mountPath: /var/lib/postgresql/data
                      - name: db-init-sql
                        mountPath: /docker-entrypoint-initdb.d/init.sql
                        subPath: init.sql
            volumes:
                - name: db-storage
                  persistentVolumeClaim:
                      claimName: db-pvc
                - name: db-init-sql
                  configMap:
                    name: db-init-sql
